--- a/docs/创建页表.md
+++ b/docs/创建页表.md
@@ -4,6 +4,7 @@
 
 ## 概要
 
+上一章我们通过 bbl 启用了分页机制。但是这个由于这个页表过于简陋，所以我们希望能够使用自己写的页表。
 bbl 中创建的页表其实并不完善，所以本章我们将自己动手建立页表（remap kernel）。这个过程分为以下几步：
 
 1. 获取需要重新映射的内存范围（虚拟地址）。
