--- a/docs/内存分配.md
+++ b/docs/内存分配.md
@@ -1,51 +1,61 @@
 # 内存分配
 
-> 本章代码对应 commit ：ce95a018b972c80c59d83e8f7eb5d0d2a7f9b6b5
+> 本章代码对应分支：alloc-memory
 
 ## 概要
 
-上一章我们通过 bbl 启用了分页机制。但是这个由于这个页表过于简陋，所以我们希望能够使用自己写的页表。显然，系统需要一片内存来存放页表。本章我们的目标是将物理内存分配给页表。但是在此之前我们需要先能够管理物理内存，为此我们需要：
+1. 初始化内核堆。
+2. 判断内存的那些部分是可以供我们分配的。
+3. 引入 buddy allocator 辅助管理物理内存。
+4. 实现物理内存的分配与释放。
 
-1. 判断内存的那些部分是可以供我们分配的。
-2. 引入 buddy allocator 辅助管理物理内存。
-3. 实现物理内存的分配与释放。
+## 初始化内核堆
 
-## 设置可分配内存范围
+内存可以在 stack 上分配，在我们的 os 中，stack 的大小在 `boot/entry.asm` 被定为 `4 * 4k` 。但是如 Vec<T> ，其内存分配是在 heap 上的。堆的大小取决于 **全局分配器** 。目前 rust 语言并没有指定 **全局分配器** ，有些编译器可能会帮忙指定。`#[global_allocator]` 标签允许我们实现自己的 **全局分配器** 。这里如果不指定 **全局分配器** 会导致后续无法使用 Vec<T> 等数据结构。
 
-首先，新建 **consts.rs** 保存一些常量：
+> [more about global allocator](https://doc.rust-lang.org/1.26.2/unstable-book/language-features/global-allocator.html)
 
-```rust
-pub const KERNEL_OFFSET: usize = 0xC000_0000;
+这里我们使用一个现成的适用于本 os 的 **全局分配器** ：
 
-pub const MEMORY_OFFSET: usize = 0x8000_0000;
-
-pub const PAGE_SIZE: usize = 4096;
-
-pub const MAX_DTB_SIZE: usize = 0x2000;
-
-pub const KERNEL_HEAP_SIZE: usize = 0x00a0_0000;
-```
-
-在实现内存分配之前，堆的初始化是必须的：
-
-**Cargo.toml**
+- `Cargo.toml`
 
 ```rust
 [dependencies]
 buddy_system_allocator = "0.1"
 ```
 
-**lib.rs**
+- `lib.rs`
 
 ```rust
+#![feature(alloc_error_handler)]
+
+mod memory;
+mod consts;
+
 use buddy_system_allocator::LockedHeap;
 #[global_allocator]
 static HEAP_ALLOCATOR: LockedHeap = LockedHeap::empty();
+
+#[alloc_error_handler]
+fn foo(_: core::alloc::Layout) -> ! {
+    panic!("DO NOTHING alloc_error_handler set by kernel");
+}
 ```
 
-**memory/mod.rs**
+接下来创建目录和文件，对堆进行初始化：
+
+- `consts.rs`
 
 ```rust
+pub const KERNEL_HEAP_SIZE: usize = 0x00a0_0000;
+```
+
+> 大小可以自行规定，合适就行
+
+- `memory/mod.rs`
+
+```rust
+use crate::consts::*;
 use crate::HEAP_ALLOCATOR;
 
 pub fn init(dtb: usize) {
@@ -64,82 +74,73 @@ fn init_heap() {
             .lock()
             .init(HEAP.as_ptr() as usize, KERNEL_HEAP_SIZE);
     }
-    println!("heap init end");
 }
 ```
 
-现在我们便可以开始计算哪些部分的内存是能够被分配的。
+> 这里我们将 sum 位设为 1 。sum（permit supervisor user memory access）位修改 S 模式读、写和指令获取访问虚拟内存的权限。仅当 sum = 1 时则允许在 S 模式下访问属于 U 模式（U = 1）的内存，否则会产生异常
+> 这一步现在还不是必须的，要到用户程序时才能体现出作用
 
-在 **Cargo.toml** 中加入：
+## 计算可用内存
+
+硬件信息需要通过 device tree 获得，但是略繁琐，所以这里我们暂时直接钦定 `MEMORY_END`：
+
+- `consts.rs`
 
 ```rust
-[dependencies]
-device_tree = { path = "crate/device_tree-rs" }
+pub const MEMORY_OFFSET: usize = 0x8000_0000;
+pub const MEMORY_END: usize = 0x8800_0000;
+pub const PAGE_SIZE: usize = 4096;
 ```
 
-这时编译出现如下错误：
+- `memory/mod.rs`
 
-```
-error: `#[alloc_error_handler]` function required, but not found
+```rust
+// Symbols provided by linker script
+extern "C" {
+    fn end();
+}
 
-error: aborting due to previous error
+use frame_allocator::{ init as init_frame_allocator, test as test_frame_allocator };    // TODO
 
-error: Could not compile `os`.
-
-To learn more, run the command again with --verbose.
-Makefile:30: recipe for target 'kernel' failed
-make: *** [kernel] Error 101
-```
-
-### FIX error： `#[alloc_error_handler]` function required, but not found
-
-这需要在`os/lib.rs`中添加一行：
-
-```
-#![feature(alloc_error_handler)]
-```
-
-表示要定义`alloc_error_handler`这个函数。然后在os/memory/mod.rs中实现这个函数的定义：
-
-```
-#[alloc_error_handler]
-fn foo(_: core::alloc::Layout) -> ! {
-    panic!("DO NOTHING alloc_error_handler set by kernel");
+pub fn init() {
+    unsafe {
+        sstatus::set_sum(); // Allow user memory access
+    }
+    init_heap();
+    let memory_start = (end as usize) + PAGE_SIZE;
+    let memory_size = MEMORY_END - memory_start;
+    init_frame_allocator(memory_start, memory_size);
+    test_frame_allocator();
 }
 ```
 
-其实这个函数只是简单地panic整个OS。
+> `boot/linker.ld` 为 `end` 赋值，这个是 kernel 的结束虚拟地址，此时由于尚未启用页表，虚实地址相等。在此之后是 device tree base ，我们为其留出 `PAGE_SIZE` 大小的空间存放
 
-### 显示机器和内核的内存信息
+## 物理内存块的分配与释放
 
-通过 `let Some((addr, mem_size)) = device_tree::DeviceTree::dtb_query_memory(dtb)` 即可从 dtb 中读取内存的起始地址和大小。？？？
+我们将内存整体视为许多连续的“块”，这里我们将每个块的大小定为 4k ，也即 `PAGE_SIZE` 。那么我们需要一个数据结构来管理这些块：哪些块被分配了、哪些块是空闲的、如何进行分配和释放等。buddy system 就是通过二叉树对内存块进行管理的一种算法。
 
-在内核结束的位置，紧接着就会存放 dtb ：
+- `Cargo.toml`
 
-```rust
-let kernel_end = dtb - KERNEL_OFFSET + MEMORY_OFFSET + PAGE_SIZE; // 内核的起始物理地址
-let kernel_size = kernel_end - addr; // 内核的终止物理地址
-```
-
-> 这里给 dtb 留出了一页的大小存放
-
-## 引入 buddy allocator
-
-创建文件： **memory/frame_allocator/mod.rs** 。
-
-在 **Cargo.toml** 中添加：
+这里提供已经写好的 [buddy system 算法](https://github.com/xy-plus/buddy-allocator) ，请自行下载并放于 `crate` 目录下：
 
 ```rust
 [dependencies]
-bit_field = "0.9"
 buddy-allocator = { path = "crate/buddy-allocator" }
 lazy_static = { version = "1.3", features = ["spin_no_std"] }
 spin = "0.3"
 ```
 
-**buddy_allocator** 通过 [buddy system](https://coolshell.cn/articles/10427.html) 算法分配内存，算法细节可自行上网查询。
+> 算法细节可阅读 [伙伴分配器的一个极简实现](https://coolshell.cn/articles/10427.html)
+> 也可以直接看提供的代码
 
-在 **memory/frame_allocator/mod.rs** 中添加：
+- `memory/frame_allocator/mod.rs`
+
+这里我们需要创建一个用于分配内存的 `BUDDY_ALLOCATOR` 全局静态变量。但是他的值需要在运行时才能被确定。这里 [lazy_static](http://autumnai.github.io/collenchyma/lazy_static/) 便帮我们解决了这个问题。
+
+同时，为了防止多线程时内存被重复分配，需要使用互斥锁(Mutex)管理 `BUDDY_ALLOCATOR` 。
+
+> 什么是 **Mutex** ？我们用一个现实生活中的例子来理解：假设你去超市买了一个笔记本，付款之后你还没来得及把他拿走，这时来了另一个人，也付了钱，买了这个笔记本。那么这个笔记本属于谁呢？这不是我们乐意见到的。为了防止这种情况，在超市买东西的时候，前一个人的结账尚未完成的时候，下一个人是不能够开始结账的。同样的道理适用于内存块的分配。
 
 ```rust
 use buddy_allocator::{ BuddyAllocator, log2_down };
@@ -154,123 +155,81 @@ lazy_static! {
         = Mutex::new(BuddyAllocator::new());
 }
 
-static mut KERNEL_END: usize = 0;
-
 pub fn init(start: usize, lenth: usize) {
-    unsafe {
-        KERNEL_END = start;
-    }
-    let mut bu = BUDDY_ALLOCATOR.lock()
-        .init(log2_down(lenth / PAGE_SIZE) as u8);
+    BUDDY_ALLOCATOR.lock()
+        .init(log2_down((start + lenth - MEMORY_OFFSET) / PAGE_SIZE) as u8);
+    alloc_frames((start - MEMORY_OFFSET - 1) / PAGE_SIZE + 1);
     println!("++++init frame allocator succeed!++++");
 }
-```
-
-> 对详细实现过程感兴趣的读者请自行上 [GitHub](https://github.com/xy-plus/buddy-allocator) 阅读代码，这里不做过多介绍
-
-这里我们需要创建一个用于分配内存的 **BUDDY_ALLOCATOR** 全局静态变量。但是他的值需要在运行时才能被确定。这里 [lazy_static](http://autumnai.github.io/collenchyma/lazy_static/) 便帮我们解决了这个问题。
-
-什么是 **Mutex** ？我们用一个现实生活中的例子来理解：假设你去超市买了一个笔记本，付款之后你还没来得及把他拿走，这时来了另一个人，也付了钱，买了这个笔记本。那么这个笔记本属于谁呢？这不是我们乐意见到的。为了防止这种情况，在超市买东西的时候，前一个人的结账尚未完成的时候，下一个人是不能够开始结账的。同样的道理适用于内存块的分配，这里的内存块就可以类比于超市的笔记本，互斥锁（Mutex）就使得内存在分配时不会收到外界干扰。
-
-> 更详细的互斥锁内容将在以后的章节介绍
-
-`init` 根据内存大小初始化了 **buddy_allocator** ，同时修改了内核结束地址，以便后续物理内存的分配和释放时使用。
-
-## 物理内存块的分配与释放
-
-有了上面的这些工作，内存分配和释放的实现变得十分简洁：
-
-```rust
-// in memory/frame_allocator/mod.rs
-
-use riscv::addr::*;
 
 pub fn alloc_frame() -> Option<Frame> {
-        alloc_frames(1)
+    alloc_frames(1)
 }
 
 pub fn alloc_frames(size: usize) -> Option<Frame> {
-    unsafe {
-        let ret = BUDDY_ALLOCATOR
-            .lock()
-            .alloc(size)
-            .map(|id| id * PAGE_SIZE + KERNEL_END);
-        ret.map(|addr| Frame::of_addr(PhysAddr::new(addr)))
-    }
+    let ret = BUDDY_ALLOCATOR
+        .lock()
+        .alloc(size)
+        .map(|id| id * PAGE_SIZE + MEMORY_OFFSET);
+    ret.map(|addr| Frame::of_addr(PhysAddr::new(addr)))
 }
 
 pub fn dealloc_frame(target: Frame) {
-        dealloc_frames(target, 1);
+    dealloc_frames(target, 1);
 }
 
 pub fn dealloc_frames(target: Frame, size: usize) {
-    unsafe {
-        BUDDY_ALLOCATOR
-            .lock()
-            .dealloc(target.number() - KERNEL_END / PAGE_SIZE, size);
-    }
+    BUDDY_ALLOCATOR
+        .lock()
+        .dealloc(target.start_address().as_usize() / PAGE_SIZE - MEMORY_OFFSET / PAGE_SIZE, size);
 }
 ```
 
-`riscv::addr::*` 引入了 `struct Frame` 以及一些相关函数。由于 `buddy_allocator.alloc` 返回的是内存块编号，类型为 `Option<usize>` ，所以需要将其转换为物理地址，然后通过 `Frame::of_addr` 转换为物理帧。
+`riscv::addr::*` 引入了 `struct Frame` 以及一些相关函数。由于 `buddy_allocator::alloc` 返回的是内存块编号，类型为 `Option<usize>` ，所以需要将其转换为物理地址，然后通过 `Frame::of_addr` 转换为物理帧。同理，在释放内存时需要进行类似的操作。
 
 这里涉及到一个 rust 的语法：闭包。我们举一个例子便能理解他：
 
 - Some(233).map(|x| x + 666) = Some(899)
 
-完成了分配和释放的函数，让我们来简单的测试一下他的正确性。在 **memory/frame_allocator/mod.rs** 中加入：
+完成了分配和释放内存的函数，让我们来简单的测试一下他的正确性：
+
+- `memory/frame_allocator/mod.rs`
 
 ```rust
 pub fn test() {
     let frame1: Frame = alloc_frame().expect("failed to alloc frame");
     println!("test frame_allocator: {:#x}", frame1.start_address().as_usize());
-    let frame2: Frame = alloc_frame().expect("failed to alloc frame");
+    let frame2: Frame = alloc_frames(2).expect("failed to alloc frame");
     println!("test frame_allocator: {:#x}", frame2.start_address().as_usize());
-    dealloc_frame(frame1);
     let frame3: Frame = alloc_frame().expect("failed to alloc frame");
     println!("test frame_allocator: {:#x}", frame3.start_address().as_usize());
-    dealloc_frame(frame2);
+    dealloc_frame(frame1);
+    dealloc_frames(frame2, 2);
     dealloc_frame(frame3);
 }
 ```
 
-然后修改 **memory/mod.rs** 的 `init()` ：
+- `init.rs`
 
 ```rust
-pub mod frame_allocator;
-
-use frame_allocator::{ init as init_frame_allocator, test as test_frame_allocator };
-use crate::consts::*;
-use crate::HEAP_ALLOCATOR;
-
-pub fn init(dtb: usize) {
-    use riscv::register::sstatus;
-    unsafe {
-        // Allow user memory access
-        sstatus::set_sum();
-    }
-    init_heap();
-    if let Some((addr, mem_size)) = device_tree::DeviceTree::dtb_query_memory(dtb) {
-        assert_eq!(addr, MEMORY_OFFSET);
-        let KERNEL_END = dtb - KERNEL_OFFSET + MEMORY_OFFSET + PAGE_SIZE;
-        let KERNEL_SIZE = KERNEL_END - addr;
-        init_frame_allocator(KERNEL_END, KERNEL_SIZE);
-    } else {
-        panic!("failed to query memory");
-    }
-    test_frame_allocator();
+#[no_mangle]
+pub fn rust_main() -> ! {
+    crate::interrupt::init();
+    crate::clock::init();
+    crate::memory::init();
+    loop {}
 }
 ```
 
-执行 **make run** ，出现了如下错误：
+执行 `make run` ，出现了如下错误：
 
 ```
 error[E0152]: duplicate lang item found: `oom`.
-  --> src/memory/mod.rs:49:1
+  --> src/lib.rs:23:1
    |
-49 | / fn foo(_: core::alloc::Layout) -> ! {
-50 | |     panic!("DO NOTHING alloc_error_handler set by kernel");
-51 | | }
+23 | / fn foo(_: core::alloc::Layout) -> ! {
+24 | |     panic!("DO NOTHING alloc_error_handler set by kernel");
+25 | | }
    | |_^
    |
    = note: first defined in crate `buddy_allocator`.
@@ -281,19 +240,21 @@ For more information about this error, try `rustc --explain E0152`.
 error: Could not compile `os`.
 ```
 
-这是由于buddy_allocator也定义了对内存分配错误的处理函数，这样就和我们之前定义的alloc_error_handler冲突了。把我们的老代码`src/memory/mod.rs：47-51 lines`删除掉即可。再次执行`make run`，编译正确，且运行的屏幕部分显示内容为：
+这是由于 buddy_allocator 也定义了对内存分配错误的处理函数，这样就和我们之前定义的 `alloc_error_handler` 冲突了。把我们实现的 `alloc_error_handler` 删掉即可。再次执行 `make run` ，编译正确，屏幕输出：
 
 ```rust
+...
 ++++init frame allocator succeed!++++
-test frame_allocator: 0x80c01000
-test frame_allocator: 0x80c02000
-test frame_allocator: 0x80c01000
+test frame_allocator: 0x81000000
+test frame_allocator: 0x81002000
+test frame_allocator: 0x81001000
+100 ticks!
+...
 ```
 
-注意到 `0x80c02000 - 0x80c01000 = 0x1000 = 4096` ，每次分配的内存恰好就为一个页面的大小（PAGE_SIZE）。
-
+> 仔细观察输出的地址，再思考一下 buddy system 分配内存的过程
 > 这里输出的均为物理地址
 
 ## 预告
 
-本章我们实现了内存分配，下一章我们将利用 frame_allocator 创建页表。
+本章我们实现了内存分配，下一章我们学习管理已分配的内存的工具：页表。
