--- a/docs/内存分配.md
+++ b/docs/内存分配.md
@@ -50,7 +50,7 @@ fn foo(_: core::alloc::Layout) -> ! {
 pub const KERNEL_HEAP_SIZE: usize = 0x00a0_0000;
 ```
 
-> 大小可以自行规定，合适就行
+> 大小可以自行规定，合适就行，后续（下一章）将根据实际情况修改它
 
 - `memory/mod.rs`
 
